# Weather-app

./: .gitignore  README.md  alembic.ini  pyproject.toml
src/app/: dao.py  dao_user.py  dao_weather.py  database.py  main.py  models.py  rb.py  routers.py  scheduler.py  schemas.py
src/app/dao/: dao_user.py  dao_weather.py
src/app/migrations/: env.py
src/app/migrations/versions/: 17ddd049edcf_initial_commit.py  63a2ebff293d_initial_commit.py
